--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.6",
     "@tailwindcss/vite": "^4.1.6",
     "autoprefixer": "^10.4.21",
@@ -19,7 +20,10 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
